# stellarlegacy

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  libtool  pre-build
admin/: acinclude.m4.in  am_edit  configure.in.min  mkinstalldirs
stellarlegacy/: Makefile  Makefile.am  Makefile.in  sl.cpp
stellarlegacy/admin/: Makefile  Makefile.am  Makefile.in  game-client.cpp  game-client.h  game-create.cpp  game-create.h  game-sc.cpp  game-sc.h  game-server.cpp  game-server.h  game.cpp  game.h  lex.cpp  lex.l  parser-use.h  parser.cpp  parser.h  parser.y  player.cpp  player.h  server.cpp
stellarlegacy/common/: Makefile  Makefile.am  Makefile.in  bitmap.cpp  bitmap.h  bitmap.lo  datapackage.cpp  datapackage.h  datapackage.lo  defs.h  global.cpp  global.h  global.lo  leakchecker.h  libslcommon.la  line.cpp  line.h  line.lo  link.cpp  link.h  link.lo  os_specific.cpp  os_specific.h  os_specific.lo  osval.cpp  osval.h  osval.lo  plist.h  point.cpp  point.h  point.lo  prototype.h  random.cpp  random.h  random.lo  rectangle.cpp  rectangle.h  rectangle.lo  stringtools.cpp  stringtools.h  (+1 more)
stellarlegacy/docs/: Makefile.in
stellarlegacy/gamelogic/: Makefile  Makefile.am  Makefile.in  action.cpp  action.h  filter.cpp  filter.h  fleet.cpp  fleet.h  fleetaction.act  galaxy.cpp  galaxy.h  item.cpp  item.h  planet.h  property.cpp  property.h  race.cpp  race.h  ruleatom.cpp  ruleatom.h  rulesystem.cpp  rulesystem.h  shipdesign.cpp  shipdesign.h  stobj.cpp  stobj.h  stolist.cpp  stolist.h  subfleet.cpp  subfleet.h  substance.cpp  substance.h  system.cpp  system.h  universe.cpp  universe.h  waypoint.cpp  waypoint.h
stellarlegacy/gamelogic/modules/: Makefile.in  fleet_basic.cpp  race_basic.cpp  race_basic.h  race_sl.h  race_sl.lo  system_basic.cpp  system_basic.h
stellarlegacy/gamelogic/ruleatoms/: Makefile.am  fleet_basic.h  race_sl.cpp  subfleet_basic.cpp  subfleet_basic.h  system_basic.loT
stellarlegacy/testgame/: universe-definition.sl
stellarlegacy/testing/: Makefile.am  Makefile.in  test-action.cpp  test-action.sl  test-def.cpp  test-fleet.cpp  test-item-Armor.cpp  test-item-CargoBay.cpp  test-item-Colonizer.cpp  test-item-EWeapon.cpp  test-item-FTLEngine.cpp  test-item-FighterLauncher.cpp  test-item-FuelScoop.cpp  test-item-FuelTank.cpp  test-item-JammerAntiPenetrate.cpp  test-item-JammerCloak.cpp  test-item-JammerDisguise.cpp  test-item-JammerNormal.cpp  test-item-KWeapon.cpp  test-item-MineLayer.cpp  test-item-MiningBot.cpp  test-item-RepairBot.cpp  test-item-SPWeaponLauncher.cpp  test-item-STLEngine.cpp  test-item-ScannerAntiCloakActive.cpp  test-item-ScannerAntiCloakPassive.cpp  test-item-ScannerAntiDisguiseActive.cpp  test-item-ScannerAntiDisguisePassive.cpp  test-item-ScannerNormalActive.cpp  test-item-ScannerNormalPassive.cpp  test-item-ScannerPenetrateActive.cpp  test-item-ScannerPenetratePassive.cpp  test-item-Shield.cpp  test-item-TargetingComputer.cpp  test-link.cpp  test-objectid.cpp  test-osval.cpp  test-random.cpp  test-shipdesign.cpp  test-subfleet.cpp  (+3 more)
